--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,21 +10,26 @@
     "from splinter import Browser\n",
     "import pandas as pd\n",
     "import requests\n",
-    "import re"
+    "import re\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
-    "browser = Browser('chrome', headless=False)"
+    "# executable_path = {'executable_path':'chromedriver.exe'}\n",
+    "\n",
+    "browser = Browser('chrome')\n",
+    "\n",
+    "# browser = Browser('chrome', headless=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,11 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [],
    "source": [
     "browser.visit(url)\n",
+    "\n",
+    "time.sleep(3)\n",
+    "\n",
     "html = browser.html\n",
     "soup = bs(html, 'html.parser')\n",
     "results = soup.find_all('li', class_='slide')"
@@ -75,16 +83,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#results[0]"
+    "# results[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +104,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 300,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# news_title = results[0].find('div', class_='content_title').a.text,\n",
+    "# news_p = results[0].find('div', class_='article_teaser_body').text\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,11 +130,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
     "scrapings['news_results'] = news_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# browser.quit()"
    ]
   },
   {
@@ -142,8 +170,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 304,
+   "metadata": {
+    "run_control": {
+     "marked": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# executable_path = {'executable_path':'chromedriver.exe'}\n",
+    "\n",
+    "# browser = Browser('chrome', **executable_path,  headless=False)\n",
+    "\n",
+    "# browser = Browser('chrome', headless=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
+   "metadata": {
+    "run_control": {
+     "marked": true
+    }
+   },
    "outputs": [],
    "source": [
     "url = 'https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars'"
@@ -151,45 +200,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 306,
+   "metadata": {
+    "run_control": {
+     "marked": true
+    }
+   },
    "outputs": [],
    "source": [
     "browser.visit(url)\n",
     "\n",
     "xpath = '//li[@class=\"slide\"]'\n",
     "\n",
-    "results = browser.find_by_xpath(xpath)\n",
+    "results = browser.find_by_xpath(xpath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 307,
+   "metadata": {
+    "run_control": {
+     "marked": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# time.sleep(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
+   "metadata": {
+    "run_control": {
+     "marked": true
+    }
+   },
+   "outputs": [],
+   "source": [
     "img = results[0]\n",
     "img.click()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 309,
+   "metadata": {
+    "run_control": {
+     "marked": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "time.sleep(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 310,
+   "metadata": {
+    "run_control": {
+     "marked": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "html = browser.html\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 311,
+   "metadata": {
+    "run_control": {
+     "marked": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# time.sleep(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
+   "metadata": {
+    "run_control": {
+     "marked": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "soup = bs(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "metadata": {
+    "run_control": {
+     "marked": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# time.sleep(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 314,
+   "metadata": {
+    "run_control": {
+     "marked": true
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA23611_hires.jpg'"
+       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA23634_hires.jpg'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "html = browser.html\n",
-    "soup = bs(html, 'html.parser')\n",
     "img_url = \"https://www.jpl.nasa.gov\" + soup.find('img', class_='fancybox-image')['src']\n",
     "img_url"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 315,
+   "metadata": {
+    "run_control": {
+     "marked": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# browser.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,30 +384,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "InSight sol 391 (2020-01-01) low -99.0ºC (-146.1ºF) high -17.6ºC (0.3ºF)\n",
-      "winds from the SE at 5.7 m/s (12.7 mph) gusting to 21.9 m/s (49.0 mph)\n",
+      "InSight sol 398 (2020-01-09) low -100.6ºC (-149.1ºF) high -16.8ºC (1.8ºF)\n",
+      "winds from the SSE at 6.1 m/s (13.6 mph) gusting to 19.5 m/s (43.7 mph)\n",
       "pressure at 6.40 hPa\n"
      ]
     }
    ],
    "source": [
     "browser.visit(url)\n",
+    "\n",
+    "time.sleep(3)\n",
+    "\n",
     "html = browser.html\n",
     "soup = bs(html, 'html.parser')\n",
-    "mars_weather = soup.find('div', class_='content').find('div', class_='js-tweet-text-container').p.contents[0]\n",
+    "mars_weather = soup.find('div', class_='js-tweet-text-container')\n",
+    "mars_weather = mars_weather.p.contents[0]\n",
     "print(mars_weather)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 319,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# type(mars_weather)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 320,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# type(soup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 321,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# soup.find('div', class_='js-tweet-text-container')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 322,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +562,7 @@
        "8          Recorded By:           Egyptian astronomers"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 324,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +660,7 @@
        "Recorded By:                   Egyptian astronomers"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 325,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +681,7 @@
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th></th>\\n    </tr>\\n    <tr>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Equatorial Diameter:</th>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>Polar Diameter:</th>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2 (Phobos &amp; Deimos)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Distance:</th>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Period:</th>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>Surface Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>First Record:</th>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>Recorded By:</th>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 326,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,6 +754,8 @@
     "    result = browser.find_by_xpath(xpath)\n",
     "    result[i].click()\n",
     "    \n",
+    "    time.sleep(3)\n",
+    "    \n",
     "    html = browser.html\n",
     "    soup = bs(html, 'html.parser')\n",
     "    hemisphere_image_urls.append({\n",
@@ -575,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +782,7 @@
        "  'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 330,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +825,7 @@
        "dict_keys(['news_results', 'img_url', 'mars_weather', 'table_string', 'hemisphere_image_urls'])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 332,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +846,7 @@
        " 'news_p': \"The clean room at NASA's Jet Propulsion Laboratory was open to the media to see NASA's next Mars explorer before it leaves for Florida in preparation for a summertime launch.\"}"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 333,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,16 +857,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA23611_hires.jpg'"
+       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA23634_hires.jpg'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 334,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,16 +877,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'InSight sol 391 (2020-01-01) low -99.0ºC (-146.1ºF) high -17.6ºC (0.3ºF)\\nwinds from the SE at 5.7 m/s (12.7 mph) gusting to 21.9 m/s (49.0 mph)\\npressure at 6.40 hPa'"
+       "'InSight sol 398 (2020-01-09) low -100.6ºC (-149.1ºF) high -16.8ºC (1.8ºF)\\nwinds from the SSE at 6.1 m/s (13.6 mph) gusting to 19.5 m/s (43.7 mph)\\npressure at 6.40 hPa'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 335,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +906,7 @@
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th></th>\\n    </tr>\\n    <tr>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Equatorial Diameter:</th>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>Polar Diameter:</th>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2 (Phobos &amp; Deimos)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Distance:</th>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Period:</th>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>Surface Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>First Record:</th>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>Recorded By:</th>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 336,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +933,7 @@
        "  'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 337,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,5 +1006,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
