--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -1,9 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Web Scraping HW  --  Mission to Mars\n",
+    "# Justin Foust  --  01/11/2020  --  Data Boot Camp"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 293,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup as bs\n",
@@ -17,20 +29,27 @@
   {
    "cell_type": "code",
    "execution_count": 294,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
-    "# executable_path = {'executable_path':'chromedriver.exe'}\n",
+    "# Initialize broswer to use for webscraping.  Since the chrome web driver has been added to my system path\n",
+    "# I did not need to define a path to its location.\n",
     "\n",
-    "browser = Browser('chrome')\n",
-    "\n",
-    "# browser = Browser('chrome', headless=False)"
+    "browser = Browser('chrome')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 295,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "scrapings = {}"
@@ -60,40 +79,50 @@
   {
    "cell_type": "code",
    "execution_count": 296,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
-    "url = 'https://mars.nasa.gov/news/'"
+    "url = 'https://mars.nasa.gov/news/'  #Set URL for Mars news"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 297,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "browser.visit(url)\n",
     "\n",
+    "# A short pause was put between loading the website in the browser and scraping the html results.\n",
+    "# Though it does not look to proceed to the next step until this already occurs I found that without\n",
+    "# a pause the website would was not able to be scraped with Splinter and would return no HTML.\n",
+    "\n",
     "time.sleep(3)\n",
     "\n",
     "html = browser.html\n",
+    "\n",
+    "# Use Beautiful Soup to parse and find the desired part of scraped HTML code.\n",
+    "\n",
     "soup = bs(html, 'html.parser')\n",
     "results = soup.find_all('li', class_='slide')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# results[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 299,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
     "news_results = {\n",
@@ -104,46 +133,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# news_title = results[0].find('div', class_='content_title').a.text,\n",
-    "# news_p = results[0].find('div', class_='article_teaser_body').text\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 301,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# news_results = []\n",
-    "\n",
-    "# for result in results:\n",
-    "#     news_results.append({\n",
-    "#         'news_title': result.find('div', class_='content_title').a.text,\n",
-    "#         'news_p': result.find('div', class_='article_teaser_body').text\n",
-    "#     })"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 302,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
+    "# Save results into dictionary\n",
+    "\n",
     "scrapings['news_results'] = news_results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 303,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# browser.quit()"
    ]
   },
   {
@@ -170,32 +170,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
-   "metadata": {
-    "run_control": {
-     "marked": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# executable_path = {'executable_path':'chromedriver.exe'}\n",
-    "\n",
-    "# browser = Browser('chrome', **executable_path,  headless=False)\n",
-    "\n",
-    "# browser = Browser('chrome', headless=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 305,
    "metadata": {
     "run_control": {
-     "marked": true
+     "marked": false
     }
    },
    "outputs": [],
    "source": [
-    "url = 'https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars'"
+    "url = 'https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars'   # Set URL for site with Mars images"
    ]
   },
   {
@@ -203,12 +186,14 @@
    "execution_count": 306,
    "metadata": {
     "run_control": {
-     "marked": true
+     "marked": false
     }
    },
    "outputs": [],
    "source": [
     "browser.visit(url)\n",
+    "\n",
+    "# Select the desired node using XPath syntax\n",
     "\n",
     "xpath = '//li[@class=\"slide\"]'\n",
     "\n",
@@ -217,28 +202,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
-   "metadata": {
-    "run_control": {
-     "marked": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# time.sleep(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 308,
    "metadata": {
     "run_control": {
-     "marked": true
+     "marked": false
     }
    },
    "outputs": [],
    "source": [
+    "# Since we are only interested in the most recent image of Mars, we only need the first element in the results array\n",
     "img = results[0]\n",
+    "\n",
+    "# Use splinter to click on the element to take us to where we can scrape the URL for a high resolution image\n",
     "img.click()"
    ]
   },
@@ -247,11 +222,12 @@
    "execution_count": 309,
    "metadata": {
     "run_control": {
-     "marked": true
+     "marked": false
     }
    },
    "outputs": [],
    "source": [
+    "# Short pause to prevent returning empty value\n",
     "time.sleep(3)"
    ]
   },
@@ -260,25 +236,12 @@
    "execution_count": 310,
    "metadata": {
     "run_control": {
-     "marked": true
+     "marked": false
     }
    },
    "outputs": [],
    "source": [
-    "html = browser.html\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 311,
-   "metadata": {
-    "run_control": {
-     "marked": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# time.sleep(3)"
+    "html = browser.html"
    ]
   },
   {
@@ -286,25 +249,13 @@
    "execution_count": 312,
    "metadata": {
     "run_control": {
-     "marked": true
+     "marked": false
     }
    },
    "outputs": [],
    "source": [
+    "# Use Beautiful Soup to parse and find the desired part of scraped HTML code.\n",
     "soup = bs(html, 'html.parser')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 313,
-   "metadata": {
-    "run_control": {
-     "marked": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# time.sleep(3)"
    ]
   },
   {
@@ -312,7 +263,7 @@
    "execution_count": 314,
    "metadata": {
     "run_control": {
-     "marked": true
+     "marked": false
     }
    },
    "outputs": [
@@ -334,23 +285,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 316,
    "metadata": {
     "run_control": {
-     "marked": true
+     "marked": false
     }
    },
    "outputs": [],
    "source": [
-    "# browser.quit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 316,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Save results into dictionary\n",
     "scrapings['img_url'] = img_url"
    ]
   },
@@ -376,16 +319,24 @@
   {
    "cell_type": "code",
    "execution_count": 317,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
-    "url = 'https://twitter.com/marswxreport?lang=en'"
+    "url = 'https://twitter.com/marswxreport?lang=en'  # Set URL for Mars weather Twitter account"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 318,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -400,48 +351,31 @@
    "source": [
     "browser.visit(url)\n",
     "\n",
+    "# Short pause to prevent returning empty value\n",
     "time.sleep(3)\n",
     "\n",
     "html = browser.html\n",
+    "\n",
+    "# Use Beautiful Soup to parse and find the desired part of scraped HTML code.\n",
     "soup = bs(html, 'html.parser')\n",
     "mars_weather = soup.find('div', class_='js-tweet-text-container')\n",
+    "\n",
+    "# Since we are only interested in the current weather, return text from the first tweet\n",
     "mars_weather = mars_weather.p.contents[0]\n",
     "print(mars_weather)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# type(mars_weather)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 320,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# type(soup)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 321,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# soup.find('div', class_='js-tweet-text-container')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 322,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
+    "# Save results into dictionary\n",
     "scrapings['mars_weather'] = mars_weather"
    ]
   },
@@ -463,16 +397,24 @@
   {
    "cell_type": "code",
    "execution_count": 323,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
-    "url = 'https://space-facts.com/mars/'"
+    "url = 'https://space-facts.com/mars/'   # Set URL for Mars facts site"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 324,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -568,14 +510,21 @@
     }
    ],
    "source": [
+    "# Use Pandas to save HTML table elements\n",
     "tables = pd.read_html(url)\n",
+    "\n",
+    "# Print first table captured to see what needs to be cleaned up\n",
     "tables[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 325,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -666,6 +615,7 @@
     }
    ],
    "source": [
+    "# Remove column names and reset axis\n",
     "clean = tables[0].set_index(0).rename(columns={1:''}).rename_axis(index={0: ''})\n",
     "clean"
    ]
@@ -673,7 +623,11 @@
   {
    "cell_type": "code",
    "execution_count": 326,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -687,16 +641,22 @@
     }
    ],
    "source": [
-    "table_string = clean.to_html()\n",
+    "# Convert cleaned table to HTML and add class = 'table' to use with Bootstrap\n",
+    "table_string = clean.to_html(classes=\"table\")\n",
     "table_string"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 327,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
+    "# Save results into dictionary\n",
     "scrapings['table_string'] = table_string"
    ]
   },
@@ -730,34 +690,53 @@
   {
    "cell_type": "code",
    "execution_count": 328,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
-    "url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'"
+    "url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars' # Set URL for Mars hemispheres site"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 329,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
+    "# Create empty list to store results\n",
     "hemisphere_image_urls = []\n",
     "\n",
+    "# Select the desired node using XPath syntax\n",
     "xpath = '//div[@class=\"item\"]/a/img'\n",
     "\n",
     "browser.visit(url)\n",
+    "\n",
+    "# Save results from xpath to use as counter for number of loops to run\n",
     "results = browser.find_by_xpath(xpath)\n",
     "\n",
     "for i in range(len(results)):\n",
+    "    \n",
+    "    # Same as above and run the proper number of times to capture all elements\n",
     "    browser.visit(url)\n",
     "    result = browser.find_by_xpath(xpath)\n",
     "    result[i].click()\n",
     "    \n",
+    "    # Short pause to prevent returning empty value\n",
     "    time.sleep(3)\n",
     "    \n",
     "    html = browser.html\n",
+    "    \n",
+    "    # Use Beautiful Soup to parse and find the desired part of scraped HTML code.\n",
     "    soup = bs(html, 'html.parser')\n",
+    "    \n",
+    "    # Save results as a dictionary in list\n",
     "    hemisphere_image_urls.append({\n",
     "        'title': soup.find('h2', class_='title').text,\n",
     "        'img_url': soup.find('div', class_='downloads').find('a', text='Sample')['href']\n",
@@ -767,7 +746,11 @@
   {
    "cell_type": "code",
    "execution_count": 330,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -794,30 +777,47 @@
   {
    "cell_type": "code",
    "execution_count": 331,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": [
+    "# Save results into dictionary\n",
     "scrapings['hemisphere_image_urls'] = hemisphere_image_urls"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 332,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -831,13 +831,18 @@
     }
    ],
    "source": [
+    "# Print keys of dictionary result\n",
     "scrapings.keys()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 333,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -858,7 +863,11 @@
   {
    "cell_type": "code",
    "execution_count": 334,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -878,7 +887,11 @@
   {
    "cell_type": "code",
    "execution_count": 335,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -898,7 +911,11 @@
   {
    "cell_type": "code",
    "execution_count": 336,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -918,7 +935,11 @@
   {
    "cell_type": "code",
    "execution_count": 337,
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "outputs": [
     {
      "data": {
